--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,7 @@
     <PackageVersion Include="Azure.Storage.Queues" Version="12.17.1" />
     <PackageVersion Include="coverlet.collector" Version="6.0.0" />
     <PackageVersion Include="Google.Protobuf" Version="3.25.1" />
+    <PackageVersion Include="Grpc.AspNetCore.HealthChecks" Version="2.59.0" />
     <PackageVersion Include="Grpc.AspNetCore.Server" Version="2.59.0" />
     <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.59.0" />
     <PackageVersion Include="Grpc.Core.Api" Version="2.59.0" />
@@ -36,9 +37,9 @@
     <PackageVersion Include="NSubstitute" Version="5.1.0" />
     <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.16" />
     <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
-    <PackageVersion Include="xunit" Version="2.6.3" />
+    <PackageVersion Include="xunit" Version="2.6.4" />
     <PackageVersion Include="xunit.abstractions" Version="2.0.3" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.5" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.6" />
   </ItemGroup>
 
 </Project>
