Add missing token

--- a/.github/workflows/scaler-ci-image.yml
+++ b/.github/workflows/scaler-ci-image.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Upload Code Coverage
         uses: ./.github/actions/code-coverage
         with:
+          codecovToken: ${{ secrets.CODECOV_TOKEN }}
           reportPath: ${{ runner.temp }}/TestResults/*/coverage.cobertura.xml
 
   publishImage:
